--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>مخدومين</title>
 
-    <!-- PWA manifest -->
+    <title>ملائكة كنيسة السيدة العذراء</title>
+
+    <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- iOS support -->
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <!-- iOS Support -->
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-
-    <!-- Theme color -->
-    <meta name="theme-color" content="#d32f2f" />
+    <meta name="theme-color" content="#c53030" />
   </head>
+
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
