--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>ملائكة كنيسة السيدة العذراء</title>
-
-    <!-- Manifest -->
     <link rel="manifest" href="/manifest.json" />
-
-    <!-- iOS Support -->
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
@@ -18,7 +13,6 @@
 
   <body>
     <div id="root"></div>
-
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- هذا الجزء يتم التعامل معه تلقائيًا بواسطة Vite عند البناء -->
   </body>
 </html>
